--- a/app/src/main/res/layout/nested_fragment_b.xml
+++ b/app/src/main/res/layout/nested_fragment_b.xml
@@ -9,8 +9,9 @@
     tools:context=".NestedFragmentB">
 
     <TextView
+        android:id="@+id/song_text"
         style="@style/InfoText"
-        android:text="Это Nested FragmentB!"/>
+        tools:text="Это Nested FragmentB!"/>
 
     <Button
         android:id="@+id/button"
