--- a/app/src/main/res/layout/nested_fragment_a.xml
+++ b/app/src/main/res/layout/nested_fragment_a.xml
@@ -9,8 +9,9 @@
     tools:context=".NestedFragmentA">
 
     <TextView
+        android:id="@+id/song_text"
         style="@style/InfoText"
-        android:text="Это Nested FragmentA!"/>
+        tools:text="Это Nested FragmentA!"/>
 
     <Button
         android:id="@+id/button"
